[gd_scene load_steps=38 format=2]

[ext_resource path="res://Escenas/AlimentandoPersonaje/AlimentandoPersonaje.gd" type="Script" id=1]
[ext_resource path="res://Asset/fondo_nubes1.png" type="Texture" id=2]
[ext_resource path="res://Asset/AlimentandoPersonaje/idle.png" type="Texture" id=3]
[ext_resource path="res://Asset/AlimentandoPersonaje/head_idle2.png" type="Texture" id=4]
[ext_resource path="res://Asset/AlimentandoPersonaje/head_idle.png" type="Texture" id=5]
[ext_resource path="res://Asset/AlimentandoPersonaje/banana.png" type="Texture" id=6]
[ext_resource path="res://Escenas/AlimentandoPersonaje/Banana.gd" type="Script" id=7]
[ext_resource path="res://Asset/AlimentandoPersonaje/carne.png" type="Texture" id=8]
[ext_resource path="res://Escenas/AlimentandoPersonaje/Carne.gd" type="Script" id=9]
[ext_resource path="res://Asset/AlimentandoPersonaje/frutilla.png" type="Texture" id=10]
[ext_resource path="res://Escenas/AlimentandoPersonaje/Frutilla.gd" type="Script" id=11]
[ext_resource path="res://Asset/AlimentandoPersonaje/galletita.png" type="Texture" id=12]
[ext_resource path="res://Escenas/AlimentandoPersonaje/Galletita.gd" type="Script" id=13]
[ext_resource path="res://Asset/AlimentandoPersonaje/pan.png" type="Texture" id=14]
[ext_resource path="res://Escenas/AlimentandoPersonaje/Pan.gd" type="Script" id=15]
[ext_resource path="res://Asset/AlimentandoPersonaje/tomate.png" type="Texture" id=16]
[ext_resource path="res://Escenas/AlimentandoPersonaje/Tomate.gd" type="Script" id=17]
[ext_resource path="res://Asset/AlimentandoPersonaje/leche.png" type="Texture" id=18]
[ext_resource path="res://Escenas/AlimentandoPersonaje/Leche.gd" type="Script" id=19]
[ext_resource path="res://Asset/menu/boton_play_normal.png" type="Texture" id=20]
[ext_resource path="res://Asset/menu/boton_play_presionado.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.88177, 11.1705 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 128.642
height = 321.257

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 46.6176, 61.5756 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.34924, 3.79492 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 165.309, 159.048 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 104.106, 82.3149 )

[sub_resource type="RectangleShape2D" id=7]

[sub_resource type="CircleShape2D" id=8]
radius = 108.178

[sub_resource type="RectangleShape2D" id=9]

[sub_resource type="RectangleShape2D" id=10]

[sub_resource type="CapsuleShape2D" id=11]
radius = 82.8177
height = 430.386

[sub_resource type="RectangleShape2D" id=12]

[sub_resource type="CircleShape2D" id=13]
radius = 66.4984

[sub_resource type="RectangleShape2D" id=14]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 112.874, 79.5 )

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Avanzar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="AlimentarPersonaje" type="Node2D"]
script = ExtResource( 1 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 513.085, 259.634 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="bruno" type="Sprite" parent="."]
position = Vector2( 868.989, 536.545 )
texture = ExtResource( 3 )

[node name="PeloCorto" type="Sprite" parent="."]
visible = false
position = Vector2( 868.989, 536.545 )
texture = ExtResource( 4 )

[node name="PeloLargo" type="Sprite" parent="."]
visible = false
position = Vector2( 868.989, 536.545 )
texture = ExtResource( 5 )

[node name="1" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 461.59, 162.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="1"]
shape = SubResource( 1 )

[node name="2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 461.59, 162.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="2"]
shape = SubResource( 1 )

[node name="3" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 461.59, 162.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="3"]
shape = SubResource( 1 )

[node name="4" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 461.59, 162.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="4"]
shape = SubResource( 1 )

[node name="5" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 461.59, 162.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="5"]
shape = SubResource( 1 )

[node name="6" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 461.59, 162.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="6"]
shape = SubResource( 1 )

[node name="7" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 461.59, 162.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="7"]
shape = SubResource( 1 )

[node name="8" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 461.59, 162.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="8"]
shape = SubResource( 1 )

[node name="9" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 461.59, 162.633 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="9"]
shape = SubResource( 1 )

[node name="Banana" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 61.9025, 302.751 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Banana"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Banana/Area2D"]
position = Vector2( 74.4127, 58.2361 )
rotation = 0.826821
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Banana"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Banana/StaticBody2D"]
shape = SubResource( 3 )

[node name="Area_pocicion" type="Area2D" parent="Banana"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Banana/Area_pocicion"]
shape = SubResource( 4 )

[node name="Carne" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 71.5487, 102.415 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Carne"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Carne/Area2D"]
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="Carne"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Carne/StaticBody2D"]
shape = SubResource( 6 )

[node name="Area2D2" type="Area2D" parent="Carne"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Carne/Area2D2"]
shape = SubResource( 7 )

[node name="Frutilla" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 78.5899, 462.135 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Frutilla"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Frutilla/Area2D"]
position = Vector2( 0, 22.7582 )
shape = SubResource( 8 )

[node name="Area2D2" type="Area2D" parent="Frutilla"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Frutilla/Area2D2"]
shape = SubResource( 9 )

[node name="Galletita" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 908.349, 106.23 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 12 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Galletita"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Galletita/Area2D"]
position = Vector2( -10.6895, -25.7746 )
shape = SubResource( 5 )

[node name="Area2D2" type="Area2D" parent="Galletita"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Galletita/Area2D2"]
shape = SubResource( 10 )

[node name="Pan" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 737.253, 599.438 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Pan"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pan/Area2D"]
rotation = 1.23785
shape = SubResource( 11 )

[node name="Area2D2" type="Area2D" parent="Pan"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pan/Area2D2"]
shape = SubResource( 12 )

[node name="Tomate" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 938.414, 499.007 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 16 )
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Tomate"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tomate/Area2D"]
shape = SubResource( 13 )

[node name="Area2D2" type="Area2D" parent="Tomate"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tomate/Area2D2"]
shape = SubResource( 14 )

[node name="Leche" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 932.174, 298.732 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 18 )
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Leche"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leche/Area2D"]
shape = SubResource( 5 )

[node name="Area2D2" type="Area2D" parent="Leche"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leche/Area2D2"]
shape = SubResource( 15 )

[node name="Avanzar" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 175.322
margin_top = 5.84407
margin_right = 651.322
margin_bottom = 419.844
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/boton = SubResource( 16 )
[connection signal="input_event" from="Banana/Area2D" to="Banana" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Banana/Area_pocicion" to="Banana" method="_on_Area_pocicion_area_entered"]
[connection signal="input_event" from="Carne/Area2D" to="Carne" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Carne/Area2D2" to="Carne" method="_on_Area2D2_area_entered"]
[connection signal="input_event" from="Frutilla/Area2D" to="Frutilla" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Frutilla/Area2D2" to="Frutilla" method="_on_Area2D2_area_entered"]
[connection signal="input_event" from="Galletita/Area2D" to="Galletita" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Galletita/Area2D2" to="Galletita" method="_on_Area2D2_area_entered"]
[connection signal="input_event" from="Pan/Area2D" to="Pan" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Pan/Area2D2" to="Pan" method="_on_Area2D2_area_entered"]
[connection signal="input_event" from="Tomate/Area2D" to="Tomate" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Tomate/Area2D2" to="Tomate" method="_on_Area2D2_area_entered"]
[connection signal="input_event" from="Leche/Area2D" to="Leche" method="_on_Area2D_input_event"]
[connection signal="area_entered" from="Leche/Area2D2" to="Leche" method="_on_Area2D2_area_entered"]
[connection signal="pressed" from="Avanzar" to="." method="_on_Avanzar_pressed"]
